package org.alejo.dao;

import org.alejo.model.Order;

public interface OrderDAO extends GenericDAO<Order, Integer> {
}
