package org.alejo.dao;

import org.alejo.model.Product;

public interface ProductDAO extends GenericDAO<Product, Integer> {
}
