package org.alejo.dao;

import org.alejo.model.User;

public interface UserDAO extends GenericDAO<User, Integer>{
}
